# TDP028

./: 07012016-23909q7n.kml  General.txt  README.md
BeerApp/app/: build.gradle
BeerApp/app/src/androidTest/java/se/liu/student/frejo105/beerapp/: ApplicationTest.java
BeerApp/app/src/main/: AndroidManifest.xml
BeerApp/app/src/main/java/se/liu/student/frejo105/beerapp/: BeerApp.java  DisplayBeerActivity.java  (+6 more)
BeerApp/app/src/main/res/layout/: activity_beer_details.xml  activity_display_beer.xml  activity_drawer_menu.xml  activity_main.xml  activity_pub_details.xml  activity_pub_display.xml  activity_search.xml  beer_list_adapter.xml  content_display_beer.xml  content_main.xml  dialog_settings.xml  fragment_beer_details.xml  fragment_beer_list.xml  fragment_detailed_beer.xml  fragment_display_beer.xml  fragment_main.xml  fragment_pub_details.xml  fragment_pub_list.xml  fragment_search.xml  pub_list_adapter.xml  pub_results_adapter.xml  search_result_adapter.xml
BeerApp/app/src/main/res/layout-land/: activity_pub_display.xml  activity_search.xml
BeerApp/app/src/main/res/layout-normal-land/: fragment_detailed_beer_temp.xml
BeerApp/app/src/main/res/menu/: menu_display_beer.xml  menu_main.xml
BeerApp/app/src/main/res/values/: attrs.xml  distance_units.xml  error_strings.xml  strings.xml  styles.xml
backend/beerapp/: Cargo.toml
backend/beerapp/src/: main.rs  model.rs
backend/db/: population.sql  procedures.sql  setup.sql  tables.sql  usage_tests.sql
tdp028-redovisnignar/: entreprenor.txt  konkurentanalys.txt  litteratur.txt  screencasts.txt  tweet.txt
(+74 files in other folders)
