[package]
name = "beerapp"
version = "0.1.0"
authors = ["Fredrik Jonsén <fredrikjonsen@gmail.com>"]

[dependencies]
rustc-serialize = "0.3.19"
iron = "*"
regex = "*"

[dependencies.mysql]
version = "*"
default-features = false
features = ["socket"]

[dependencies.router]
git = "https://github.com/iron/router.git"

[dependencies.urlencoded]
version = "*"

[dependencies.lazy_static]
git = "https://github.com/rust-lang-nursery/lazy-static.rs"
